--- a/templates/pedidos_faturados.html
+++ b/templates/pedidos_faturados.html
@@ -1,3 +1,6 @@
+
+
+
 {% extends 'base.html' %}
 
 {% include 'header.html' %}
@@ -12,172 +15,127 @@
     }
 
     th, td {
-       
         padding: 8px;
         text-align: left;
         line-height: 6px;
-        
-        /*max-width: 200px;*/
     }
 
     th {
-        border-top: 10px solid #5f74f0 !important; /* Borda superior mais larga para as células de cabeçalho */
+        border-top: 10px solid #5f74f0 !important;
+    }
+
+    .short-date-input {
+        width: 50px; /* Define a largura desejada */
     }
 </style>
 
-
-
-
 <div class="w-100" style="padding-top: 0px !important;">
-                
-               
-                <div  class="w-100"> 
-                   
-
-                    <!-- <button type="button" class="btn btn-success ms-1 d-flex justify-content-end" data-bs-toggle="modal" data-bs-target="#add_op_modal_visual">Abrir Ordem de Produção</button> -->
-                    <a href="{{url_for('op_cards')}}" type="button" class="btn btn-success ms-2">Voltar</a>
-                    
-                    <h2 class="d-flex justify-content-center mt-2"><strong>Pedidos Faturados</strong></h2>
-
-                    
-
-                    <div class="input-group d-flex justify-content-end w-100">
-                        
-                        
-                        <form method="POST" action="{{url_for('pedidos_faturados')}}" class="input-group w-50 input-group d-flex justify-content-start ms-4">
-                        <input type="search" class="form-control  w-50" placeholder="Pesquisar pedido" name="filtro_pd" aria-label="Pesquisar dor pedido" aria-describedby="basic-addon2" autocomplete="off" style="text-transform: uppercase;">
-                        <div class="input-group-append">
-                        <button class="btn btn-success ms-1" type="submit">'Buscar por Pedido'</button>
-                    </div>
-                
-                                    
-                    <div class="input-group d-flex justify-content-end w-100">
-                
-                        <form method="POST" action="{{url_for('pedidos_faturados')}}" class="input-group w-50 input-group d-flex justify-content-start ms-4">
-                            <input type="search" class="form-control  w-50" placeholder="Pesquisar Código de Produto" name="filtro_cod" aria-label="Pesquisar por Código" aria-describedby="basic-addon2" autocomplete="off" style="text-transform: uppercase;">
-                            <div class="input-group-append">
-                            <button class="btn btn-info ms-1" type="submit">Buscar Código</button>
-                            </form>
-                    </div>
+    <div class="w-100">
+        <a href="{{url_for('op_cards')}}" type="button" class="btn btn-success ms-2">Voltar</a>
+        <h2 class="d-flex justify-content-center mt-2"><strong>Pedidos Faturados</strong></h2>
+        
+        <div class="input-group d-flex justify-content-end w-100">
+            <form method="POST" action="{{url_for('pedidos_faturados')}}" class="input-group w-50 input-group d-flex justify-content-start ms-4">
+                <input type="search" class="form-control w-50" placeholder="Pesquisar pedido" name="filtro_pd" aria-label="Pesquisar por pedido" aria-describedby="basic-addon2" autocomplete="off" style="text-transform: uppercase;">
+                <div class="input-group-append">
+                    <button class="btn btn-success ms-1" type="submit">'Buscar Pedido'</button>
                 </div>
+            </form>
+        </div>
 
-                <div class="container w-100">
-
-                    {% with messages=get_flashed_messages(with_categories=true) %}
-                    {%if messages%}
-                    {%for category, message in messages%}
-                    <div class="alert alert-success">
-                        {{message}}
-                        <button type="button" class="btn-close float-end" data-bs-dismiss="alert" aria-label="Close">
-                        </button>
-                    </div>
-                    {%endfor%}
-                    {%endif%}
-                    {%endwith%}
+        <div class="input-group d-flex justify-content-end w-100">
+            <form method="POST" action="{{url_for('pedidos_faturados')}}" class="input-group w-50 input-group d-flex justify-content-start ms-4">
+                <input type="search" class="form-control w-50" placeholder="Pesquisar Código de Produto" name="filtro_cod" aria-label="Pesquisar por Código" aria-describedby="basic-addon2" autocomplete="off" style="text-transform: uppercase;">
+                <div class="input-group-append">
+                    <button class="btn btn-info ms-1" type="submit">Buscar Código</button>
                 </div>
+            </form>
+        </div>
 
-                <div class="w-100 margin-top p-2">
+        <div class="input-group d-flex justify-content-end w-100">
+            <form method="POST" action="{{url_for('pedidos_faturados')}}" class="input-group w-50 input-group d-flex justify-content-start ms-4">
+                <input type="date" class="form-control short-date-input" name="filtro_data_inicio" aria-label="Data Início" aria-describedby="basic-addon2">
+                <input type="date" class="form-control short-date-input" name="filtro_data_fim" aria-label="Data Fim" aria-describedby="basic-addon2">
+                <div class="input-group-append">
+                    <button class="btn btn-primary ms-1" type="submit">Filtrar por Data</button>
+                </div>
+            </form>
+        </div>
 
-                <table class="table table-hover table-info">
-                    
-
-                    <tr class="table-primary">                        
-                        <th>Pedido</th>
-                        <th>Status</th>
-                        <th>Data Emiss</th>
-                        <th>Cliente</th>
-                        <th>Código Cliente</th>
-                        <th>Código</th>
-                        <th>Data Entrega</th>
-                        <th>obs. Entrega</th>
-                        <th>Liga</th>
-                        <th>Canto</th>
-                        <th>Furo</th>
-                        <th>Embalagem</th>
-                        <th>Dimensional</th>
-                        <th>Quantidade</th>
-                        <th>Um</th>
-                        <th>Descrição</th>      
-                    </tr>
-
-
-                    {% for row in pedidos.items %}
-                                 
-                    <tr class='{{"table-dark" if row.situação == "Encerrada" else ""}}'>                      
-                        <td>{{row.pedido}}</td>
-                        <td>{{row.Status}}</td>
-                        <td>{{row.emissao}}</td>
-                        <td>{{row.cliente}}</td>
-                        <td>-</td>
-                        <td>{{row.codigo}}</td>
-                        <td>{{row.data_entrega}}</td>
-                        <td>{{row.obs_entrega|default('-', true)}}</td>
-                        <td>Cobre</td>
-                        <td>{{row.canto|default('-', true)}}</td>
-                        <td>{{row.furo|default('-', true)}}</td>
-                        <td><font size="1">{{row.embalagem|default('-', true)}}</font></td>
-                        <td>{{row.dimensional[0:30]}}</td>
-                        <td>{{row.quantidade|default('', true)}}</td>
-                        <td>KG</td>
-                        <td><font size="1">{{row.descricao}}</font></td>
-
-                        {% if row.status2 == "Cancelado" %}
-                        <td rowspan="2">
-                                <form action="pd/{{row.pedidos_faturados}}" method="post" type="hidden" >
-                                    <input type="hidden" name="item" value="{{row.item}}">
-                                    <input type="hidden" name="numero_op_visual" value="{{row.numero_op_visual}}">
-                                    <input type="hidden" name="piv" value="{{row.piv}}">
-                                    <input type="hidden" name="op_qtd" value="{{row.quantidade}}">
-                                    <input type="hidden" name="descricao" value="{{row.descrição}}">
-                                    <input type="hidden" name="peso_enviado" value="{{row.peso_enviado}}">
-                                    <input type="hidden" name="peso_retornado" value="{{row.peso_retornado}}">
-                                    <input type="hidden" name="fino_enviado" value="{{row.fino_enviado}}">
-                                    <input type="hidden" name="fino_retornado" value="{{row.fino_retornado}}">     
-                                    <input type="hidden" name="setor" value="{{row.setor}}">
-                                    <input type="hidden" name="operador" value="{{row.operador}}">     
-                                    <button type="submit" for="myForm" class="btn btn-primary btn-xs"><img
-                                    src="{{url_for('static', filename='images/eye.svg')}}" alt=""></button>                           
-                                </form>
-                                </td>
-                            {% else %}
-                            {% endif %}
-                     
-                        </tr>
-                    <!-- <tr class='{{"table-dark" if row.status2 == "Cancelado" else ""}}' style="border-bottom: 6px solid #82a6e9 !important;" >                      
-                    
-                        
-                        <td><b>Peso Env.: </b>{{row.peso_enviado}}<b> / Rec.: </b> {{row.peso_retornado}}</td>
-                        <td><b>Fino Env.: </b>{{row.fino_enviado}}<b> / Rec.:</b>{{row.fino_retornado}}</td> 
-                        <td><b>Data: </b>{{row.data_abertura}}</td> 
-                        <td><b>Hora: </b>{{row.hora_abertura}}hs</td>
-                        <td colspan="2"><b>Qtd. Estimada : </b>{{row.quantidade}}</td>
-                        <td><b> Qtd. Produzida : </b>{{row.quantidade_real}}</td>
-                    </tr> -->
-                    {% include 'edit_modal_visual.html' %}
-                    {% endfor %}
-                </table>
-            </div></div>
-                
-
-                {% for page_num in pedidos.iter_pages(left_edge=1, right_edge=1,
-                    left_current=1, right_current=2) %} {% if page_num %} {% if pedidos.page ==
-                    page_num %}
-                    <a
-                      class="btn btn-dark mb-4"
-                      href="{{ url_for('pedidos_faturados', page=page_num) }}"
-                      >{{ page_num }}</a
-                    >
-                    {% else %}
-                    <a
-                      class="btn btn-outline-dark mb-4"
-                      href="{{ url_for('pedidos_faturados', page=page_num) }}"
-                      >{{ page_num }}</a
-                    >
-                    {% endif %} {% else %} ... {% endif %} {% endfor %}
-             
+        <div class="container w-100">
+            {% with messages=get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+            {% for category, message in messages %}
+            <div class="alert alert-success">
+                {{ message }}
+                <button type="button" class="btn-close float-end" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
+            {% endfor %}
+            {% endif %}
+            {% endwith %}
+        </div>
+
+        <table>
+            <tr>
+                <th><h5>Soma Total Faturado: {{ tqtd }} kg </h5></th>
+                <th></th>
+            </tr>
+        </table>
+
+        <div class="w-100 margin-top p-2">
+            <table class="table table-hover table-info">
+                <tr class="table-primary">
+                    <th>Pedido</th>
+                    <th>Status</th>
+                    <th>Data Emiss</th>
+                    <th>Cliente</th>
+                    <th>Código Cliente</th>
+                    <th>Código</th>
+                    <th>Data Entrega</th>
+                    <th>obs. Entrega</th>
+                    <th>Liga</th>
+                    <th>Canto</th>
+                    <th>Furo</th>
+                    <th>Embalagem</th>
+                    <th>Dimensional</th>
+                    <th>Quantidade</th>
+                    <th>Um</th>
+                    <th>Descrição</th>
+                </tr>
+
+                {% for row in pedidos.items %}
+                <tr class='{{"table-dark" if row.situação == "Encerrada" else ""}}'>
+                    <td>{{ row.pedido }}</td>
+                    <td>{{ row.Status }}</td>
+                    <td>{{ row.emissao }}</td>
+                    <td>{{ row.cliente }}</td>
+                    <td>-</td>
+                    <td>{{ row.codigo }}</td>
+                    <td>{{ row.data_entrega }}</td>
+                    <td>{{ row.obs_entrega|default('-', true) }}</td>
+                    <td>Cobre</td>
+                    <td>{{ row.canto|default('-', true) }}</td>
+                    <td>{{ row.furo|default('-', true) }}</td>
+                    <td><font size="1">{{ row.embalagem|default('-', true) }}</font></td>
+                    <td>{{ row.dimensional[0:30] }}</td>
+                    <td>{{ row.quantidade|default('', true) }}</td>
+                    <td>KG</td>
+                    <td><font size="1">{{ row.descricao }}</font></td>
+                </tr>
+                {% endfor %}
+            </table>
         </div>
     </div>
+
+    {% for page_num in pedidos.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+    {% if page_num %}
+    {% if pedidos.page == page_num %}
+    <a class="btn btn-dark mb-4" href="{{ url_for('pedidos_faturados', page=page_num) }}">{{ page_num }}</a>
+    {% else %}
+    <a class="btn btn-outline-dark mb-4" href="{{ url_for('pedidos_faturados', page=page_num) }}">{{ page_num }}</a>
+    {% endif %}
+    {% else %} ... {% endif %}
+    {% endfor %}
 </div>
 
 {% endblock %}
