--- a/templates/mov_op_visual.html
+++ b/templates/mov_op_visual.html
@@ -312,7 +312,8 @@
                     {%if i.situação == "Aberta"%}   
                     
 
-                    <form method="POST" action="{{url_for('add_lote_mov_op_prod')}}">
+                    <form method="POST" action="{{url_for('
+                    ')}}">
 
                     
                     <input class="form-control" type="number" placeholder="Quantidade" value={{row.quantidade_item - row.quantidade_real}} name="qtd_parcial">
