--- a/templates/estrutura.html
+++ b/templates/estrutura.html
@@ -17,7 +17,8 @@
                     <div class="container w-100 d-flex justify-content-end">
        
                     <div class="input-group-append">
-                        <a href="{{url_for('itens')}}" type="button" class="btn btn-success ms-2">Voltar</a>
+                        
+                        <button id="backBtn" class="btn btn-success ms-2">Voltar</button>
                     </div>
                     </div>
 
@@ -92,5 +93,10 @@
 </div>
 </div>
 
+<script>
+    document.getElementById("backBtn").addEventListener("click", function(){
+      history.back();
+    });
+  </script>
 
 {% endblock %}
