--- a/templates/op_cards.html
+++ b/templates/op_cards.html
@@ -232,7 +232,7 @@
     <img src="{{ url_for('static', filename='images/logo-iso.png')}}" width=200 alt="logo">
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link card-menu text-center" href="{{url_for('index')}}">Sistema kels</a>
+            <a class="nav-link card-menu text-center" href="{{url_for('index')}}">Sistema Kels</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{{url_for('pedidos')}}">Pedidos</a>
