--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Visual Sistema Kels {% endblock %}
+{% block title %} Sistema Visual - Kels {% endblock %}
 
 {% block body %}
 
