--- a/templates/lote_geral_modal.html
+++ b/templates/lote_geral_modal.html
@@ -37,6 +37,7 @@
                         <!-- <option selected>Posição</option> -->
                         <option value="Visual">Normal</option>
                         <option value="Temporario">Adiantado</option>
+                        <option value="Temporario">Material Produzido</option>
                     </select> 
                     </div>
 
