--- a/templates/add_lote_op_modal.html
+++ b/templates/add_lote_op_modal.html
@@ -13,17 +13,17 @@
                    
                     <div class="form-group">
                         <label for="recipient-name" class="col-form-label">Ordem Produção: {{ref[0]}}</label>
-                        <input type="hidden"  name="referencia" value="{{ref[0]}}">
+                        <input type="hidden"  autocomplete ="off" name="referencia" value="{{ref[0]}}">
                     </div>    
                     
                     <div class="form-group">
                         <label for="recipient-name" class="col-form-label">Código do item:</label>
-                        <input type="text" name="item" class="form-control">
+                        <input type="text"  autocomplete ="off" name="item" class="form-control">
                     </div>
 
                     <div class="form-group">
                         <label for="recipient-name" class="col-form-label">Quantidade a Movimentar:</label>
-                        <input type="number" name="quantidade_item" class="form-control">
+                        <input type="number"  autocomplete ="off" name="quantidade_item" class="form-control">
                     </div>
                                   
                     
